# module27

./: alembic.ini  config.ini  main.py  my_select.py  pyproject.toml  seed.py
migrations/versions/: 368fb806556a_init.py  b91122da167c_init.py
src/: db.py  models.py
src_cli/: repositiry.py
